[tool.poetry]
name = "violet"
version = "0.1.0"
description = "An asyncio job queue"
authors = ["elixi.re <python@elixi.re>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
asyncpg = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
